--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ allprojects {
 
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.12'
-        compileOnly 'org.projectlombok:lombok:1.16.18'
+        compileOnly('org.projectlombok:lombok:1.16.20')
+        annotationProcessor 'org.projectlombok:lombok:1.16.20'
     }
 
     tasks.withType(Jar) {
