--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ allprojects {
         testCompile group: 'junit', name: 'junit', version: '4.12'
         compileOnly('org.projectlombok:lombok:1.16.20')
         annotationProcessor 'org.projectlombok:lombok:1.16.20'
+        compile 'com.google.code.gson:gson:2.8.5'
     }
 
     tasks.withType(Jar) {
