Refactoring controllers, stages and views of the client Add Javadoc for the Oware client

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allprojects {
 }
 
 project('client') {
-    mainClassName = "fr.ensicaen.oware.client.applications.Connection"
+    mainClassName = "fr.ensicaen.oware.client.OwareApp"
     jar {
         // Tune the java manifest, to tell about the main class
         manifest {
