server: send the gameboard to all players client: display a simplified game board for testing purposes Also rename Main to OwareServer

--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ project('client') {
 }
 
 project('server') {
-    mainClassName = "fr.ensicaen.oware.server.Main"
+    mainClassName = "fr.ensicaen.oware.server.OwareServer"
     jar {
         // Tune the java manifest, to tell about the main class
         manifest {
